add: directory :green_book:

--- a/package.json
+++ b/package.json
@@ -13,9 +13,5 @@
     "directory"
   ],
   "author": "Dhruv Jain <dhruvjainpenny@gmail.com>",
-  "license": "ISC",
-  "dependencies": {
-    "fs-extra": "^8.1.0",
-    "simple-git": "^1.126.0"
-  }
+  "license": "ISC"
 }
