--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "directory.json",
   "scripts": {
     "start": "node collect.js",
-    "update": "node release.js"
+    "update": "node release.js",
+    "prepublishOnly": "package-ok"
   },
   "keywords": [
     "types",
@@ -16,6 +17,7 @@
   "author": "Dhruv Jain <dhruvjainpenny@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "prepublish-ok": "^0.5.0",
     "simple-git": "^1.129.0"
   },
   "repository": {
