fix: ignore DefinitelyTyped

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,7 +2,7 @@ name: cron
 
 on:
   schedule:
-    - cron: '3 3 * * *'
+    - cron: "3 3 * * *"
 
 jobs:
   update:
@@ -12,12 +12,12 @@ jobs:
 
       - uses: actions/setup-node@v1
         with:
-          node-version: '13.x'
-      
+          node-version: "13.x"
+
       - name: Install
         run: |
           npm install
-      
+
       - name: Clone
         run: |
           git clone https://github.com/DefinitelyTyped/DefinitelyTyped --depth 1
@@ -25,17 +25,21 @@ jobs:
       - name: Collect
         run: |
           npm start
-        
+
       - name: Update
         run: |
           npm run update
+
+      - name: Remove DefinitelyTyped
+        run: |
+          rm -rf DefinitelyTyped
 
       - name: Create .npmrc
         run: |
           echo "//registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN" >> ~/.npmrc
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      
+
       - name: Publish
         run: |
           npm publish
