--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,8 +1,10 @@
-name: cron
+name: update-directory
 
 on:
   schedule:
-    - cron: "3 3 * * *"
+    # Run every sunday
+    - cron: "0 0 * * 0"
+  workflow_dispatch:
 
 jobs:
   update:
