--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "types",
     "DefinitelyTyped",
     "typescript",
-    "directory"
+    "directory",
+    "types-sync"
   ],
   "author": "Dhruv Jain <dhruvjainpenny@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "prepublish-ok": "^0.5.0",
-    "simple-git": "^2.38.0"
+    "simple-git": "^3.11.0"
   },
   "repository": {
     "type": "git",
