--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.242.0",
   "description": "Directory of all DefinitelyTyped types",
   "main": "directory.json",
+  "types": "index.d.ts",
   "scripts": {
     "start": "node collect.js",
     "update": "node release.js",
@@ -19,7 +20,7 @@
   "license": "ISC",
   "devDependencies": {
     "prepublish-ok": "^0.5.0",
-    "simple-git": "^3.11.0"
+    "simple-git": "^3.14.0"
   },
   "repository": {
     "type": "git",
