--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -10,11 +10,17 @@ jobs:
   update:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v5
         with:
-          node-version: "16.x"
+          fetch-depth: 0
+      - name: git config
+        run: |
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+
+      - uses: actions/setup-node@v5
+        with:
+          node-version: "24.x"
 
       - name: Install
         run: |
@@ -28,25 +34,13 @@ jobs:
         run: |
           npm start
 
-      - name: Update
+      - name: Release
         run: |
-          npm run update
+          npm run release
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Remove DefinitelyTyped
         run: |
           rm -rf DefinitelyTyped
-
-      - name: Create .npmrc
-        run: |
-          echo "//registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN" >> ~/.npmrc
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Publish
-        run: |
-          npm publish
-
-      - name: Push
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
