--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "types-directory",
-  "version": "0.313.0",
+  "version": "0.314.0",
   "description": "Directory of all DefinitelyTyped types",
   "main": "directory.json",
   "types": "index.d.ts",
   "scripts": {
     "start": "node collect.js",
-    "update": "node release.js",
-    "prepublishOnly": "package-ok"
+    "prepublishOnly": "package-ok",
+    "release": "release-it minor --ci"
   },
   "keywords": [
     "types",
@@ -20,7 +20,7 @@
   "license": "ISC",
   "devDependencies": {
     "prepublish-ok": "^0.5.0",
-    "simple-git": "^3.28.0"
+    "release-it": "^19.0.5"
   },
   "repository": {
     "type": "git",
